Exp-2/output/hf-eval-data-v3-reuslt-34b-eval/f00746_segment_objects.err
  File "./f00746_segment_objects.py", line 58
    def test_segment_objects():
    ^
SyntaxError: invalid syntax
